@@ -7,6 +7,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Fixed issue with Gallery Post-Format being used when the `gallery` shortcode is not used.
 * Corrected i18n code for EXIF data
 * Additional i18n code corrections and enhancements
+* Fixed undefined offset when there is no image found in post
 
 /** ------------------------------------------------------------------------- */
 == Version 1.2.1 ==
